DuPont DevSB/src/objects/Actions__c.object
<CustomObject>
    <fields>
        <fullName>Date_Due_Closed__c</fullName>
        <label>Date Due/Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Opened__c</fullName>
        <label>Date Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activity Assignment</fullName>
                </value>
                <value>
                    <fullName>Activity Closure</fullName>
                </value>
                <value>
                    <fullName>API Knowledge Transfer</fullName>
                </value>
                <value>
                    <fullName>Campaigns</fullName>
                </value>
                <value>
                    <fullName>Contracts &amp; Orders</fullName>
                </value>
                <value>
                    <fullName>Creating Activities</fullName>
                </value>
                <value>
                    <fullName>Dashboards</fullName>
                </value>
                <value>
                    <fullName>Data Migration Test File</fullName>
                </value>
                <value>
                    <fullName>Date Created Fields</fullName>
                </value>
                <value>
                    <fullName>Design Progress</fullName>
                </value>
                <value>
                    <fullName>Inactive Users</fullName>
                </value>
                <value>
                    <fullName>Knowledge Transfer</fullName>
                </value>
                <value>
                    <fullName>Legacy Systems</fullName>
                </value>
                <value>
                    <fullName>Mailing List</fullName>
                </value>
                <value>
                    <fullName>Project Plan</fullName>
                </value>
                <value>
                    <fullName>QTC Interface</fullName>
                </value>
                <value>
                    <fullName>Risks</fullName>
                </value>
                <value>
                    <fullName>Search &amp; Replace</fullName>
                </value>
                <value>
                    <fullName>SOW Invoice</fullName>
                </value>
                <value>
                    <fullName>Task Console</fullName>
                </value>
                <value>
                    <fullName>Technical Contact</fullName>
                </value>
                <value>
                    <fullName>Translation Workbench</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Overview__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>To what Project is the Action related</inlineHelpText>
        <label>Project Overview</label>
        <referenceTo>Project_Overview__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Raised_By__c</fullName>
        <label>Raised By</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Comments__c</fullName>
        <label>Resolution/Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BPR/Configuration</fullName>
                </value>
                <value>
                    <fullName>Custom Development</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
                <value>
                    <fullName>General Items</fullName>
                </value>
                <value>
                    <fullName>Scope</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Action</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Date_Opened__c</columns>
        <columns>Date_Due_Closed__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Priority__c</columns>
        <columns>Project_Overview__c</columns>
        <columns>Raised_By__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Project_Victory_Open_Action_Item_Annick</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Date_Opened__c</columns>
        <columns>Date_Due_Closed__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Priority__c</columns>
        <columns>Raised_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Overview__c</field>
            <operation>contains</operation>
            <value>Victory</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Annick</value>
        </filters>
        <label>Project Victory Open Action Item-Annick</label>
    </listViews>
    <listViews>
        <fullName>Project_Victory_Open_Action_Item_CH</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Date_Opened__c</columns>
        <columns>Date_Due_Closed__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Priority__c</columns>
        <columns>Raised_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Overview__c</field>
            <operation>contains</operation>
            <value>Victory</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Cheryl</value>
        </filters>
        <label>Project Victory Open Action Item- CH</label>
    </listViews>
    <listViews>
        <fullName>Project_Victory_Open_Action_Item_Status</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Date_Opened__c</columns>
        <columns>Date_Due_Closed__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Description__c</columns>
        <columns>Priority__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Overview__c</field>
            <operation>contains</operation>
            <value>Victory</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Date_Due_Closed__c</field>
            <operation>lessThan</operation>
            <value>7/11/2018</value>
        </filters>
        <label>Project Victory Open Action Item Status</label>
    </listViews>
    <listViews>
        <fullName>Project_Victory_Open_Action_Items_Sandy</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Date_Opened__c</columns>
        <columns>Date_Due_Closed__c</columns>
        <columns>Type__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Overview__c</field>
            <operation>contains</operation>
            <value>victory</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>beckwith</value>
        </filters>
        <label>Project Victory Open Action Items Sandy</label>
    </listViews>
    <listViews>
        <fullName>Project_Victory_S_C_Service_Action_Item</fullName>
        <columns>NAME</columns>
        <columns>Date_Opened__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Date_Due_Closed__c</columns>
        <columns>Description__c</columns>
        <columns>Raised_By__c</columns>
        <columns>Priority__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Overview__c</field>
            <operation>contains</operation>
            <value>Victory</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Project Victory Open Action Item</label>
    </listViews>
    <listViews>
        <fullName>Project_Victory_S_C_Service_Action_ItemC</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Date_Opened__c</columns>
        <columns>Date_Due_Closed__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Priority__c</columns>
        <columns>Project_Overview__c</columns>
        <columns>Raised_By__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Overview__c</field>
            <operation>contains</operation>
            <value>Victory</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Project Victory Actions Closed</label>
    </listViews>
    <listViews>
        <fullName>Temp_Heather_Date</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Date_Opened__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Date_Due_Closed__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Raised_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Overview__c</field>
            <operation>contains</operation>
            <value>Victory</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Temp View Heather Date</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>Action No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>